# Replica-Placement

./: README.md  RL_brain.py  env.py  maze_env.py  push.sh  run_this.py
consistent_hash/: consistent_crush  consistent_crush.cpp  consistent_crush_all  consistent_crush_all.cpp  consistent_hash  consistent_hash.cpp  consistent_hash.h  crush_test  crush_test.cc  get_map  get_map.cpp  main  main.cpp  main_test
consistent_hash/bak/: consistent_crush_bak.cpp  consistent_crush_bak2.cpp  consistent_crush_bak3.cpp
consistent_hash/map/: map.txt  map_add.txt
crush/: aio  aio.cc  consistent_crush.cpp  crush  crush.cc  crush1  crush1.cc  crush2  crush2.cc  encode  encode.cc  file_test  file_test.cc  hash_table  hash_table.cc  mytest  test.cc  test.out  test.txt  test1  test1.cc
crush/crush_test/: crushmap  map.txt  map1.txt
crush/crush_test/pool_bucket/: CMakeLists.txt  main.cc  pool_bucket.cc  pool_bucket.h
crush/crush_test/pool_bucket_bak_0512/: main.cc  main_bak.txt  pool_bucket  pool_bucket.cc  pool_bucket.h
crush/crush_test/pool_crush/: 1.txt  2.txt  4.txt  5.txt  crush_map.cc  main.cc  pool_pg_map  pool_pg_map.cc  pool_pg_map.h  script.sh  tmp.txt
crush/crush_test/pool_crush/bak_0519/: pool_pg_map.cc  pool_pg_map.h
crush/crush_test/pool_crush_v2/: CMakeLists.txt  pool_pg_map  pool_pg_map.cc  pool_pg_map.h
crush/crush_test/test/: 1.txt  3.txt  bak.cc  crush  crush.cc  crush_map  crush_map.cc  crush_map.h  main.cc  test  test.cc  tmp.txt
crush/test/: test  test.cc
jump_hash/: jumphash  jumphash.cpp
